# Matouch_ESP32-S3_Parallel_TFT_3.16_ST7701S

examples/esp-idf/qmi8658/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
examples/esp-idf/qmi8658/components/bsp/: CMakeLists.txt  Kconfig.projbuild  bsp_board.c  bsp_board.h  idf_component.yml  marketing.c  test.c  ui.c  ui_weather.c
examples/esp-idf/qmi8658/components/bsp/audio/: bsp_audio.c  bsp_audio.h  wav.c
examples/esp-idf/qmi8658/components/bsp/qmi8658/: bsp_qmi8658.c  bsp_qmi8658.h
examples/esp-idf/qmi8658/components/bsp/sdcard/: bsp_sdcard.c  bsp_sdcard.h
examples/esp-idf/qmi8658/main/: CMakeLists.txt  idf_component.yml  main.c
hardware/: ESP32-S3 Parallel TFT 3.16“ ST7701S v1.0.brd  ESP32-S3 Parallel TFT 3.16“ ST7701S v1.0.sch  ESP32-S3 Parallel TFT 3.16“ ST7701S v1.0.xlsx
